--- a/Azure-Demo/AzureWorkplace1.ipynb
+++ b/Azure-Demo/AzureWorkplace1.ipynb
@@ -14,7 +14,7 @@
     "    endpoint='https://studioapi.azureml.net'\n",
     ")\n",
     "ds = ws.datasets['Lemonade.csv']\n",
-    "frame = ds.to_dataframe()"
+    "frame = ds.to_dataframe()\n"
    ]
   },
   {
